CommServer.UA.Viewer - release - working on installer. working on CodeProtect to fix problem with the license installation testing.  - fixed problem wit the name of the wrong name of the calling assemble used to define product name.  - improved unit tests  - tested - all green Issue #: 4867

--- a/CAS.CodeProtect/Properties/Resources.resx
+++ b/CAS.CodeProtect/Properties/Resources.resx
@@ -395,4 +395,8 @@ Please navigate to: {0} manually.</value>
     <value>There is no valid product manifest - the product name is unavailable.</value>
     <comment>CAS.Lib.CodeProtect.EnvironmentAccess.UnlockKeyAssemblyContainer</comment>
   </data>
+  <data name="SourceAssemblyFailedMessage" xml:space="preserve">
+    <value>It is impossible for this environment to get source assembly and install license.</value>
+    <comment>CAS.Lib.CodeProtect.LibInstaller</comment>
+  </data>
 </root>
